--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Namaste React</title>
 </head>
 <body>
- <div id="root"></div>
-
- <script>
-    const heading = document.createElement("h1")
-   heading.innerHTML = ("Hello World through Javascript!")
-
-   const root = document.getElementById("root")
-   root.appendChild(heading)
- </script>
+    <div id="root">
+        <h1>Not Rendered</h1>
+    </div>
+    <script type="module" src="./app.js"></script>
 </body>
 </html>
